# markup_tool

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
data/test/MOT16-04/det/: det.txt
data/test/MOT16-04/result/: savetracks.txt
lib/track/: track.h
markup_backend/: CMakeLists.txt
markup_backend/include/markup_backend/: definitions.h  markup.h  nn_model.h  pipeline.h  track_container.h  tracks.h  utils.h  video.h
markup_backend/src/: CMakeLists.txt  definitions.cpp  markup.cpp  pipeline.cpp  track_container.cpp  tracks.cpp  utils.cpp  video.cpp
markup_backend/test/: CMakeLists.txt  test_markup.cpp  test_track_container.cpp  test_tracker.cpp  test_utils.cpp  test_video.cpp
markup_frontend/include/markup_frontend/: application.h  framecontrol.h  framemarkup.h  frameview.h  framewithcontrol.h  interface_utils.h  maincontrolpanel.h  markupwidget.h  scaledbox.h  timelinecontrol.h
markup_frontend/src/: CMakeLists.txt  application.cpp  framecontrol.cpp  framemarkup.cpp  frameview.cpp  framewithcontrol.cpp  maincontrolpanel.cpp  markupwidget.cpp  scaledbox.cpp  timelinecontrol.cpp
python/detector/: preprocess_seq_video.ipynb  sort.py  yolo3.py
python/detector/.ipynb_checkpoints/: preprocess_seq_video-checkpoint.ipynb
